[gd_scene load_steps=12 format=2]

[ext_resource path="res://receptiveFieldScene.gd" type="Script" id=1]
[ext_resource path="res://textures/Grating 24 deg spatial wavelength.png" type="Texture" id=2]
[ext_resource path="res://HeadKinBody_headset_waveshare_eyer.tscn" type="PackedScene" id=3]

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
params_cull_mode = 1
albedo_texture = ExtResource( 2 )

[sub_resource type="CylinderMesh" id=3]
material = SubResource( 2 )

[sub_resource type="CylinderMesh" id=13]

[sub_resource type="SpatialMaterial" id=14]
flags_unshaded = true
params_cull_mode = 1
albedo_color = Color( 0.501961, 0.501961, 0.501961, 1 )

[sub_resource type="PlaneMesh" id=15]

[sub_resource type="SpatialMaterial" id=16]
flags_unshaded = true
params_cull_mode = 2
albedo_color = Color( 0.498039, 0.498039, 0.498039, 1 )

[sub_resource type="QuadMesh" id=17]

[sub_resource type="SpatialMaterial" id=18]
flags_unshaded = true
params_cull_mode = 2
albedo_color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="CylinderKinBody1" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 10, 0, 0, 0, 1, 0, 0, 0 )

[node name="MeshInstance1" type="MeshInstance" parent="CylinderKinBody1"]
mesh = SubResource( 3 )
skeleton = NodePath("")

[node name="CylinderKinBody0" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 10, 0, 0, 0, 1, 0, 0, -3 )

[node name="MeshInstance0" type="MeshInstance" parent="CylinderKinBody0"]
mesh = SubResource( 13 )
skeleton = NodePath("")
material/0 = SubResource( 14 )

[node name="HeadKinBody" parent="." instance=ExtResource( 3 )]

[node name="TopMeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 15 )
material/0 = SubResource( 16 )

[node name="BottomMeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 15 )
material/0 = SubResource( 16 )

[node name="RightMeshInstance" type="MeshInstance" parent="."]
transform = Transform( -8.74228e-08, 0, 1, 0, 20, 0, -2, 0, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 17 )
material/0 = SubResource( 18 )

[node name="LeftMeshInstance" type="MeshInstance" parent="."]
transform = Transform( -8.74228e-08, 0, 1, 0, 20, 0, -2, 0, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 17 )
material/0 = SubResource( 18 )
